## 0.4.0 / Unreleased

  * Add support for canonicalized cache keys, as well as custom cache key
    generators, which are specified in the options as :cache_key as either
    any object that has a call() or as a block. Cache key generators get
    passed a request object and return a cache key string.

## 0.3.0 / December 2008

  * Add support for public and private cache control directives. Responses
    marked as explicitly public are cached even when the request includes
    an Authorization or Cookie header. Responses marked as explicitly private
    are considered uncacheable.

  * Added a "private_headers" option that dictates which request headers
    trigger default "private" cache control processing. By default, the
    Cookie and Authorization headers are included. Headers may be added or
    removed as necessary to change the default private logic.

  * Adhere to must-revalidate/proxy-revalidate cache control directives by
    not assigning the default_ttl to responses that don't include freshness
    information. This should let us begin using default_ttl more liberally
    since we can control it using the must-revalidate/proxy-revalidate directives.

  * Use the s-maxage Cache-Control value in preference to max-age when
    present. The ttl= method now sets the s-maxage value instead of max-age.
    Code that used ttl= to control freshness at the client needs to change
    to set the max-age directive explicitly.

  * Enable support for X-Sendfile middleware by responding to #to_path on
    bodies served from disk storage. Adding the Rack::Sendfile component
    upstream from Rack::Cache will result in cached bodies being served
    directly by the web server (instead of being read in Ruby).

  * BUG: MetaStore hits but EntityStore misses. This would 500 previously; now
    we detect it and act as if the MetaStore missed as well.

  * Implement low level #purge method on all concrete entity store